# FluorSwitch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh
.github/workflows/: ubuntu_build.yml
assets/spectra/: black_light.csv  cie_si_d65.csv  macbeth_08_purplish_blue.csv  macbeth_09_moderate_red.csv  macbeth_19_white.csv  macbeth_24_black.csv
assets/spectra/fluor/: qdot545in.csv  qdot545in_full.csv  qdot545out.csv  qdot545out_full.csv
assets/spectra/xyz/: cie_sco_2degree_xbar.csv  cie_sco_2degree_ybar.csv  cie_sco_2degree_zbar.csv
src/: main.cpp
src/camera/: camera.h
src/material/: fluorescent_material.h  light.h  material.h  spectral_light.h  spectral_material.h
src/objects/: aarect.h  box.h  constant_medium.h  cornell_box.h  geometry.h  sphere.h  triangle.h
src/render/: path_trace.h  spectral_path_trace.h
src/sampling/: pdf.h  spectral_pdf.h
src/scene/: scene.h
src/utils/: aabb.h  bvh.h  colors.h  hitable.h  hitable_list.h  hittable.h  hittable_list.h  my_print.h  onb.h  output_file.cpp  output_file.h  perlin.h  ray.h  rtw_stb_image.h  spectral_distribution.h  texture.h  util_funcs.h  vec3.h
